; ModuleID = '/home/carl/AnghaBench/php-src/sapi/phpdbg/extr_phpdbg.c_php_sapi_phpdbg_ub_write.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/phpdbg/extr_phpdbg.c_php_sapi_phpdbg_ub_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@socket_fd = common dso_local global i32 0, align 4
@flags = common dso_local global i32 0, align 4
@PHPDBG_IS_INTERACTIVE = common dso_local global i32 0, align 4
@P_STDOUT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"%.*s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i64)* @php_sapi_phpdbg_ub_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @php_sapi_phpdbg_ub_write(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i32, i32* @socket_fd, align 4
  %6 = call i32 @PHPDBG_G(i32 %5)
  %7 = icmp ne i32 %6, -1
  br i1 %7, label %8, label %20

8:                                                ; preds = %2
  %9 = load i32, i32* @flags, align 4
  %10 = call i32 @PHPDBG_G(i32 %9)
  %11 = load i32, i32* @PHPDBG_IS_INTERACTIVE, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %20, label %14

14:                                               ; preds = %8
  %15 = load i32, i32* @socket_fd, align 4
  %16 = call i32 @PHPDBG_G(i32 %15)
  %17 = load i8*, i8** %3, align 8
  %18 = load i64, i64* %4, align 8
  %19 = call i32 @send(i32 %16, i8* %17, i64 %18, i32 0)
  br label %20

20:                                               ; preds = %14, %8, %2
  %21 = load i32, i32* @P_STDOUT, align 4
  %22 = load i64, i64* %4, align 8
  %23 = trunc i64 %22 to i32
  %24 = load i8*, i8** %3, align 8
  %25 = call i64 @phpdbg_script(i32 %21, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %23, i8* %24)
  ret i64 %25
}

declare dso_local i32 @PHPDBG_G(i32) #1

declare dso_local i32 @send(i32, i8*, i64, i32) #1

declare dso_local i64 @phpdbg_script(i32, i8*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
